--- a/garantias-app/server/package.json
+++ b/garantias-app/server/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "firebase": "^9.9.1",
+    "firebase-admin": "^11.0.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19"
   }
